--- a/client/templates/admin/clients/timeline.html
+++ b/client/templates/admin/clients/timeline.html
@@ -1,5 +1,5 @@
 <template name="timeline">
-  {{> imageModal}}
+  <!-- {{> imageModal}} -->
   <div class="container pt">
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -20,12 +20,17 @@
               <h4 class="panel-title client-card-header">{{formatDateTime updatedAt}}</h4>
             </div>
             <div class="panel-body">
-              <p><img class="timeline-image" src={{imageURL}} width="100" height="100"/></p>
+              <!-- {{#if pdfCheck}}
+                <p><i class="fa fa-2x fa-file-o"></i></p>
+              {{else}} -->
+                <p><img class="timeline-image" src={{imageURL}} width="100" height="100"/></p>
+              <!-- {{/if}} -->
+
             </div>
           </div>
         </div>
         {{/each}}
       </div>
     </div>
-
+{{> imageModal}}
 </template>
